--- a/styles/header.css
+++ b/styles/header.css
@@ -169,3 +169,12 @@
     border-radius: 17px;
 }
 
+
+/*
+.current-user-picture {
+    height: 34px;
+    width: 34px;
+    object-fit: cover;
+    object-position: left;
+    border-radius: 17px;
+*/
